--- a/documents/documentation.html
+++ b/documents/documentation.html
@@ -142,7 +142,7 @@
 
 <body>
     <!-- Background Video -->
-    <video autoplay loop muted id="background-video">
+    <video autoplay loop muted playsinline id="background-video">
         <source src="kubelife_background.mp4" type="video/mp4">
         <source src="kubelife_background.webm" type="video/webm">
         <p>Your browser does not support the video tag. Please update your browser or use a different one.</p>
