--- a/index.html
+++ b/index.html
@@ -11,128 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css">
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        /* General Reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #121212;
-            color: #fff;
-            overflow-x: hidden;
-            height: 100vh;
-        }
-
-        /* Background Video */
-        #background-video {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            z-index: -1;
-            opacity: 0.7;
-        }
-
-        /* Header Styling */
-        header {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-            z-index: 100;
-            padding: 20px;
-            background-color: rgba(0, 0, 0, 0.6);
-            border-radius: 10px;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-        }
-
-        header h1 {
-            font-size: 3rem;
-            font-weight: 700;
-            color: #ff6347;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-        }
-
-        /* Hero Section */
-        .hero-title {
-            font-size: 3rem;
-            font-weight: bold;
-            color: white;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-        }
-
-        .hero-description {
-            font-size: 1.5rem;
-            color: white;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-        }
-
-        /* Buttons */
-        .btn-primary {
-            background-color: #ff6347;
-            border-color: #ff6347;
-        }
-
-        .btn-primary:hover {
-            background-color: #e0533d;
-            border-color: #e0533d;
-        }
-
-        .btn-lg {
-            font-size: 1.2rem;
-            padding: 15px 30px;
-        }
-
-        /* Tools Section */
-        .tools-card {
-            background-color: #222;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
-            max-width: 250px;
-        }
-
-        .tools-card h4 {
-            margin-top: 20px;
-            font-size: 1.5rem;
-        }
-
-        .tools-card p {
-            margin-top: 10px;
-            font-size: 1.1rem;
-        }
-
-        /* Footer Styling */
-        footer {
-            background-color: #121212;
-            text-align: center;
-            padding: 20px;
-            color: #fff;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-
-        footer a {
-            color: #ff6347;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-
-    </style>
+    <link rel="stylesheet" href="styles.css">  <!-- Link to your external CSS file -->
 </head>
 
 <body>
@@ -235,7 +114,7 @@
         </section>
     </main>
 
-    <!-- Footer -->
+    <!-- Footer Section -->
     <footer class="bg-dark text-white text-center py-3">
         <div class="footer-logo-container">
             <img src="images/logo.png" alt="KubEdge Logo" class="footer-logo logo-size">
@@ -247,6 +126,7 @@
     <script>
         AOS.init();
     </script>
+
 </body>
 
 </html>
