--- a/documents/documentation.html
+++ b/documents/documentation.html
@@ -51,7 +51,7 @@
         header h1 {
             font-size: 3rem;
             font-weight: 700;
-            color: #ff6347;
+            color: #3498db; /* Changed to a tech-friendly blue */
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
         }
 
@@ -65,7 +65,7 @@
 
         h2,
         h3 {
-            color: #ff6347;
+            color: #3498db; /* Changed to blue */
             text-align: center;
             margin-top: 40px;
             font-size: 2rem;
@@ -104,7 +104,7 @@
         /* Button Styling */
         .btn {
             display: inline-block;
-            background-color: #ff6347;
+            background-color: #3498db; /* Changed to blue */
             padding: 15px 30px;
             font-size: 1.1rem;
             color: #fff;
@@ -115,7 +115,7 @@
         }
 
         .btn:hover {
-            background-color: #e0533d;
+            background-color: #2980b9; /* Darker shade of blue for hover */
         }
 
         /* Footer Styling */
@@ -130,7 +130,7 @@
         }
 
         footer a {
-            color: #ff6347;
+            color: #3498db; /* Changed to blue */
             text-decoration: none;
         }
 
@@ -142,7 +142,7 @@
 
 <body>
     <!-- Background Video -->
-    <video autoplay loop muted playsinline id="background-video">
+    <video autoplay loop muted id="background-video">
         <source src="kubelife_background.mp4" type="video/mp4">
         <source src="kubelife_background.webm" type="video/webm">
         <p>Your browser does not support the video tag. Please update your browser or use a different one.</p>
@@ -150,7 +150,7 @@
 
     <!-- Header -->
     <header>
-        <h1>KubEdge Documentation</h1>
+        <!-- Removed KubEdge Documentation Header -->
         <p>Everything you need to know about deploying, managing, and scaling cloud-native applications with KubEdge</p>
     </header>
 
