--- a/documents/documentation.html
+++ b/documents/documentation.html
@@ -150,8 +150,8 @@
 
     <!-- Header -->
     <header>
-        <!-- Removed KubEdge Documentation Header -->
-        <p>Everything you need to know about deploying, managing, and scaling cloud-native applications with KubEdge</p>
+        <!-- Removed unwanted text from header -->
+        <h1>KubEdge Documentation</h1>
     </header>
 
     <!-- Main Content -->
