--- a/documents/documentation.html
+++ b/documents/documentation.html
@@ -34,12 +34,24 @@
             opacity: 0.7;
         }
 
-        /* Main Section */
+        /* Overlay to help contrast with the dark background */
         main {
             padding: 40px 20px;
             max-width: 1200px;
             margin: 0 auto;
             overflow-y: auto;
+            position: relative;
+        }
+
+        main::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+            z-index: -1; /* Behind the content */
         }
 
         h2,
@@ -48,6 +60,7 @@
             text-align: center;
             margin-top: 40px;
             font-size: 2rem;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* Added text shadow */
         }
 
         h3 {
@@ -59,12 +72,14 @@
             font-size: 1.1rem;
             line-height: 1.8;
             margin-top: 20px;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5); /* Added text shadow */
         }
 
         ul,
         ol {
             margin-left: 30px;
             font-size: 1.1rem;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5); /* Added text shadow */
         }
 
         li {
