--- a/documents/documentation.html
+++ b/documents/documentation.html
@@ -131,6 +131,18 @@
         footer a:hover {
             text-decoration: underline;
         }
+
+        /* Links for Documentation */
+        ul a {
+            color: #1abc9c; /* Set to a tech-friendly color (teal) */
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        ul a:hover {
+            color: #16a085; /* Darker shade of teal on hover */
+            text-decoration: underline;
+        }
     </style>
 </head>
 
