--- a/documents/documentation.html
+++ b/documents/documentation.html
@@ -56,7 +56,7 @@
 
         h2,
         h3 {
-            color: #3498db; /* Changed to blue */
+            color: #1abc9c; /* Same color as the links */
             text-align: center;
             margin-top: 40px;
             font-size: 2rem;
@@ -98,7 +98,7 @@
         /* Button Styling */
         .btn {
             display: inline-block;
-            background-color: #3498db; /* Changed to blue */
+            background-color: #1abc9c; /* Same color as the headings and links */
             padding: 15px 30px;
             font-size: 1.1rem;
             color: #fff;
@@ -109,7 +109,7 @@
         }
 
         .btn:hover {
-            background-color: #2980b9; /* Darker shade of blue for hover */
+            background-color: #16a085; /* Darker shade of teal for hover */
         }
 
         /* Footer Styling */
@@ -124,7 +124,7 @@
         }
 
         footer a {
-            color: #3498db; /* Changed to blue */
+            color: #1abc9c; /* Same color as the headings and links */
             text-decoration: none;
         }
 
@@ -134,7 +134,7 @@
 
         /* Links for Documentation */
         ul a {
-            color: #1abc9c; /* Set to a tech-friendly color (teal) */
+            color: #1abc9c; /* Same color as the headings and buttons */
             text-decoration: none;
             transition: color 0.3s ease;
         }
