--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css">
-    <link rel="stylesheet" href="styles.css">  <!-- Link to your external CSS file -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
     <!-- Header -->
-    <header>
-        <h1>KubEdge</h1>
-        <nav>
-            <a href="#about" class="text-white me-3">About</a>
-            <a href="#documentation" class="text-white">Documentation</a>
-        </nav>
+    <header class="bg-dark p-3">
+        <div class="container d-flex justify-content-between align-items-center">
+            <h1 class="text-white">KubEdge</h1>
+            <nav>
+                <a href="#about" class="text-white me-3">About</a>
+                <a href="#documentation" class="text-white">Documentation</a>
+            </nav>
+        </div>
     </header>
 
     <!-- Main Content -->
@@ -39,7 +41,7 @@
 
         <!-- Tools Section -->
         <section class="tools-section" id="integrated-tools">
-            <h2 class="text-center">Integrated Tools</h2>
+            <h2 class="text-center text-white">Integrated Tools</h2>
             <div class="tools-cards d-flex justify-content-center flex-wrap gap-3">
                 <!-- Tool Cards -->
                 <div class="tools-card">
@@ -72,16 +74,15 @@
 
         <!-- About Section -->
         <section class="about-section mt-5 text-center">
-            <h2>About KubEdge</h2>
+            <h2 class="text-white">About KubEdge</h2>
             <img src="images/hero-image.jpg" alt="Hero Image" class="img-fluid my-4" style="border-radius: 8px; max-height: 300px;">
             <p><strong>Devesh Singh Rathore</strong> is the creator of KubEdge, a tool designed to revolutionize cloud computing using Kubernetes and Docker.</p>
-            <!-- Added button for 'View Documents' -->
             <a href="/documents/documentation.html" class="btn btn-primary btn-lg mt-3">View Documents</a>
         </section>
 
         <!-- Documentation Section -->
         <section id="documentation" class="documentation mt-5">
-            <h2 class="text-center">Documentation</h2>
+            <h2 class="text-center text-white">Documentation</h2>
             <div class="row">
                 <div class="col-md-6">
                     <div class="card">
