--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <body>
 
     <!-- Header -->
-    <header class="bg-dark p-4">
+    <header class="bg-white p-4">
         <div class="container d-flex justify-content-between align-items-center">
-            <h1 class="text-white">KubEdge</h1>
+            <h1 class="text-dark">KubEdge</h1>
             <nav>
-                <a href="#about" class="text-white me-3">About</a>
-                <a href="#documentation" class="text-white">Documentation</a>
+                <a href="#about" class="text-dark me-3">About</a>
+                <a href="#documentation" class="text-dark">Documentation</a>
             </nav>
         </div>
     </header>
@@ -33,40 +33,38 @@
         <section class="hero text-center" data-aos="fade-in">
             <img src="images/logo.png" alt="KubEdge Logo" class="img-fluid mb-4 logo-size">
             <h1 class="hero-title display-3 text-uppercase text-shadow">KubEdge</h1>
-            <p class="hero-description lead text-light fs-4 mt-3 mb-4">
-                Unlock Hosting at the EDGE
-            </p>
+            <p class="hero-description lead fs-4 mt-3 mb-4" style="color: #f39c12;">Unlock Hosting at the EDGE</p>
             <a href="#documentation" class="btn btn-primary btn-lg mt-3 px-5 py-3 shadow-lg" style="font-size: 1.2rem;">Learn More</a>
         </section>
 
         <!-- Tools Section -->
         <section class="tools-section" id="integrated-tools">
-            <h2 class="text-center text-white">Integrated Tools</h2>
+            <h2 class="text-center" style="color: #f39c12;">Integrated Tools</h2>
             <div class="tools-cards d-flex justify-content-center flex-wrap gap-5">
                 <!-- Tool Cards -->
                 <div class="tools-card">
                     <img src="images/CiCd.png" alt="CI/CD" class="img-fluid mb-3 logo-size">
-                    <h4>CI/CD</h4>
+                    <h4 style="color: #f39c12;">CI/CD</h4>
                     <p>Seamless integration for continuous integration and delivery.</p>
                 </div>
                 <div class="tools-card">
                     <img src="images/docker.png" alt="Docker" class="img-fluid mb-3 logo-size">
-                    <h4>Docker</h4>
+                    <h4 style="color: #f39c12;">Docker</h4>
                     <p>Streamline application deployment with containerization.</p>
                 </div>
                 <div class="tools-card">
                     <img src="images/Kubernetes.png" alt="Kubernetes" class="img-fluid mb-3 logo-size">
-                    <h4>Kubernetes</h4>
+                    <h4 style="color: #f39c12;">Kubernetes</h4>
                     <p>Effortless orchestration for complex cloud environments.</p>
                 </div>
                 <div class="tools-card">
                     <img src="images/Prometheus.png" alt="Prometheus" class="img-fluid mb-3 logo-size">
-                    <h4>Prometheus</h4>
+                    <h4 style="color: #f39c12;">Prometheus</h4>
                     <p>Advanced monitoring and alerting for cloud infrastructure.</p>
                 </div>
                 <div class="tools-card">
                     <img src="images/grafana.png" alt="Grafana" class="img-fluid mb-3 logo-size">
-                    <h4>Grafana</h4>
+                    <h4 style="color: #f39c12;">Grafana</h4>
                     <p>Visualize and analyze your cloud infrastructure metrics.</p>
                 </div>
             </div>
@@ -74,7 +72,7 @@
 
         <!-- About Section -->
         <section class="about-section mt-5 text-center">
-            <h2 class="text-white">About KubEdge</h2>
+            <h2 style="color: #f39c12;">About KubEdge</h2>
             <img src="images/hero-image.jpg" alt="Hero Image" class="img-fluid my-4" style="border-radius: 8px; max-height: 300px;">
             <p><strong>Devesh Singh Rathore</strong> is the creator of KubEdge, a tool designed to revolutionize cloud computing using Kubernetes and Docker.</p>
             <a href="/documents/documentation.html" class="btn btn-primary btn-lg mt-3">View Documents</a>
@@ -82,7 +80,7 @@
 
         <!-- Documentation Section -->
         <section id="documentation" class="documentation mt-5">
-            <h2 class="text-center text-white">Documentation</h2>
+            <h2 class="text-center" style="color: #f39c12;">Documentation</h2>
             <div class="row">
                 <div class="col-md-6">
                     <div class="card">
@@ -109,7 +107,7 @@
     </main>
 
     <!-- Footer Section -->
-    <footer class="bg-dark text-white text-center py-3">
+    <footer class="bg-white text-dark text-center py-3">
         <div class="footer-logo-container">
             <img src="images/logo.png" alt="KubEdge Logo" class="footer-logo logo-size">
         </div>
