--- a/index.html
+++ b/index.html
@@ -104,14 +104,65 @@
                 </div>
             </div>
         </section>
+
+        <!-- New Features Section -->
+        <section class="features-section mt-5">
+            <h2 class="text-center" style="color: #f39c12;">Features of KubEdge</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="feature-card text-center">
+                        <h4 style="color: #f39c12;">Scalability</h4>
+                        <p>KubEdge offers seamless scalability for both small and large-scale cloud applications, enabling flexible deployment options to meet your needs.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="feature-card text-center">
+                        <h4 style="color: #f39c12;">Security</h4>
+                        <p>With Kubernetes and Docker, KubEdge ensures that your cloud infrastructure is protected by top-notch security features, minimizing risk.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="feature-card text-center">
+                        <h4 style="color: #f39c12;">Monitoring</h4>
+                        <p>Built-in Prometheus and Grafana integration provide detailed metrics and visualizations, ensuring you can monitor performance and optimize your infrastructure.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Call-to-Action Section -->
+        <section class="cta-section text-center py-5 mt-5" style="background-color: #f39c12;">
+            <h2 class="text-white">Get Started with KubEdge Today</h2>
+            <p class="text-white">Ready to experience the power of KubEdge? Sign up today and unlock the full potential of cloud computing with Kubernetes and Docker.</p>
+            <a href="#documentation" class="btn btn-dark btn-lg">Start Now</a>
+        </section>
+
+        <!-- Testimonial Section -->
+        <section class="testimonials-section mt-5">
+            <h2 class="text-center" style="color: #f39c12;">What Our Users Say</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="testimonial-card text-center">
+                        <p>"KubEdge has drastically simplified our cloud operations. The integration with Kubernetes and Docker is flawless!"</p>
+                        <h5>- John Doe, Cloud Engineer</h5>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="testimonial-card text-center">
+                        <p>"As a developer, KubEdge's CI/CD pipeline has boosted our deployment process. It's a game changer!"</p>
+                        <h5>- Jane Smith, DevOps Specialist</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer Section -->
-    <footer class="bg-white text-dark text-center py-3">
+    <footer class="bg-white text-center py-4">
         <div class="footer-logo-container">
             <img src="images/logo.png" alt="KubEdge Logo" class="footer-logo logo-size">
         </div>
-        <p>Founder: Devesh Singh Rathore | Email: <a href="mailto:deveshrathore13@gmail.com" class="text-primary">deveshrathore13@gmail.com</a></p>
+        <p class="text-dark">Founder: Devesh Singh Rathore | Email: <a href="mailto:deveshrathore13@gmail.com" class="text-primary">deveshrathore13@gmail.com</a></p>
     </footer>
 
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
