--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <body>
 
     <!-- Header -->
-    <header class="bg-white p-4">
+    <header class="bg-dark text-white p-4">
         <div class="container d-flex justify-content-between align-items-center">
-            <h1 class="text-dark">KubEdge</h1>
+            <h1 class="text-light">KubEdge</h1>
             <nav>
-                <a href="#about" class="text-dark me-3">About</a>
-                <a href="#documentation" class="text-dark">Documentation</a>
+                <a href="#about" class="text-white me-3">About</a>
+                <a href="#documentation" class="text-white">Documentation</a>
             </nav>
         </div>
     </header>
@@ -32,39 +32,39 @@
         <!-- Hero Section -->
         <section class="hero text-center" data-aos="fade-in">
             <img src="images/logo.png" alt="KubEdge Logo" class="img-fluid mb-4 logo-size">
-            <h1 class="hero-title display-3 text-uppercase text-shadow">KubEdge</h1>
-            <p class="hero-description lead fs-4 mt-3 mb-4" style="color: #f39c12;">Unlock Hosting at the EDGE</p>
-            <a href="#documentation" class="btn btn-primary btn-lg mt-3 px-5 py-3 shadow-lg" style="font-size: 1.2rem;">Learn More</a>
+            <h1 class="hero-title display-3 text-uppercase text-dark">KubEdge</h1>
+            <p class="hero-description lead fs-4 mt-3 mb-4 text-muted">Unlock Hosting at the EDGE</p>
+            <a href="#documentation" class="btn btn-dark btn-lg mt-3 px-5 py-3 shadow-lg" style="font-size: 1.2rem;">Learn More</a>
         </section>
 
         <!-- Tools Section -->
         <section class="tools-section" id="integrated-tools">
-            <h2 class="text-center" style="color: #f39c12;">Integrated Tools</h2>
+            <h2 class="text-center" style="color: #333;">Integrated Tools</h2>
             <div class="tools-cards d-flex justify-content-center flex-wrap gap-5">
                 <!-- Tool Cards -->
                 <div class="tools-card">
                     <img src="images/CiCd.png" alt="CI/CD" class="img-fluid mb-3 logo-size">
-                    <h4 style="color: #f39c12;">CI/CD</h4>
+                    <h4 style="color: #333;">CI/CD</h4>
                     <p>Seamless integration for continuous integration and delivery.</p>
                 </div>
                 <div class="tools-card">
                     <img src="images/docker.png" alt="Docker" class="img-fluid mb-3 logo-size">
-                    <h4 style="color: #f39c12;">Docker</h4>
+                    <h4 style="color: #333;">Docker</h4>
                     <p>Streamline application deployment with containerization.</p>
                 </div>
                 <div class="tools-card">
                     <img src="images/Kubernetes.png" alt="Kubernetes" class="img-fluid mb-3 logo-size">
-                    <h4 style="color: #f39c12;">Kubernetes</h4>
+                    <h4 style="color: #333;">Kubernetes</h4>
                     <p>Effortless orchestration for complex cloud environments.</p>
                 </div>
                 <div class="tools-card">
                     <img src="images/Prometheus.png" alt="Prometheus" class="img-fluid mb-3 logo-size">
-                    <h4 style="color: #f39c12;">Prometheus</h4>
+                    <h4 style="color: #333;">Prometheus</h4>
                     <p>Advanced monitoring and alerting for cloud infrastructure.</p>
                 </div>
                 <div class="tools-card">
                     <img src="images/grafana.png" alt="Grafana" class="img-fluid mb-3 logo-size">
-                    <h4 style="color: #f39c12;">Grafana</h4>
+                    <h4 style="color: #333;">Grafana</h4>
                     <p>Visualize and analyze your cloud infrastructure metrics.</p>
                 </div>
             </div>
@@ -72,15 +72,15 @@
 
         <!-- About Section -->
         <section class="about-section mt-5 text-center">
-            <h2 style="color: #f39c12;">About KubEdge</h2>
+            <h2 style="color: #333;">About KubEdge</h2>
             <img src="images/hero-image.jpg" alt="Hero Image" class="img-fluid my-4" style="border-radius: 8px; max-height: 300px;">
             <p><strong>Devesh Singh Rathore</strong> is the creator of KubEdge, a tool designed to revolutionize cloud computing using Kubernetes and Docker.</p>
-            <a href="/documents/documentation.html" class="btn btn-primary btn-lg mt-3">View Documents</a>
+            <a href="/documents/documentation.html" class="btn btn-dark btn-lg mt-3">View Documents</a>
         </section>
 
         <!-- Documentation Section -->
         <section id="documentation" class="documentation mt-5">
-            <h2 class="text-center" style="color: #f39c12;">Documentation</h2>
+            <h2 class="text-center" style="color: #333;">Documentation</h2>
             <div class="row">
                 <div class="col-md-6">
                     <div class="card">
@@ -88,7 +88,7 @@
                         <div class="card-body">
                             <h5 class="card-title">KubEdge Deployment</h5>
                             <p class="card-text">Deploy and manage your applications easily with KubEdge.</p>
-                            <a href="https://github.com/deveshrathore123/kubedge_server.git" class="btn btn-primary">View Documentation</a>
+                            <a href="https://github.com/deveshrathore123/kubedge_server.git" class="btn btn-dark">View Documentation</a>
                         </div>
                     </div>
                 </div>
@@ -98,32 +98,32 @@
                         <div class="card-body">
                             <h5 class="card-title">Docker and Kubernetes Basics</h5>
                             <p class="card-text">Get started with the fundamentals of containerization and orchestration.</p>
-                            <a href="https://www.docker.com/resources/what-container" class="btn btn-primary">Learn More</a>
+                            <a href="https://www.docker.com/resources/what-container" class="btn btn-dark">Learn More</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- New Features Section -->
+        <!-- Features Section -->
         <section class="features-section mt-5">
-            <h2 class="text-center" style="color: #f39c12;">Features of KubEdge</h2>
+            <h2 class="text-center" style="color: #333;">Features of KubEdge</h2>
             <div class="row">
                 <div class="col-md-4">
                     <div class="feature-card text-center">
-                        <h4 style="color: #f39c12;">Scalability</h4>
+                        <h4 style="color: #333;">Scalability</h4>
                         <p>KubEdge offers seamless scalability for both small and large-scale cloud applications, enabling flexible deployment options to meet your needs.</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="feature-card text-center">
-                        <h4 style="color: #f39c12;">Security</h4>
+                        <h4 style="color: #333;">Security</h4>
                         <p>With Kubernetes and Docker, KubEdge ensures that your cloud infrastructure is protected by top-notch security features, minimizing risk.</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="feature-card text-center">
-                        <h4 style="color: #f39c12;">Monitoring</h4>
+                        <h4 style="color: #333;">Monitoring</h4>
                         <p>Built-in Prometheus and Grafana integration provide detailed metrics and visualizations, ensuring you can monitor performance and optimize your infrastructure.</p>
                     </div>
                 </div>
@@ -131,15 +131,15 @@
         </section>
 
         <!-- Call-to-Action Section -->
-        <section class="cta-section text-center py-5 mt-5" style="background-color: #f39c12;">
+        <section class="cta-section text-center py-5 mt-5" style="background-color: #333;">
             <h2 class="text-white">Get Started with KubEdge Today</h2>
             <p class="text-white">Ready to experience the power of KubEdge? Sign up today and unlock the full potential of cloud computing with Kubernetes and Docker.</p>
-            <a href="#documentation" class="btn btn-dark btn-lg">Start Now</a>
+            <a href="#documentation" class="btn btn-light btn-lg">Start Now</a>
         </section>
 
         <!-- Testimonial Section -->
         <section class="testimonials-section mt-5">
-            <h2 class="text-center" style="color: #f39c12;">What Our Users Say</h2>
+            <h2 class="text-center" style="color: #333;">What Our Users Say</h2>
             <div class="row">
                 <div class="col-md-6">
                     <div class="testimonial-card text-center">
@@ -158,11 +158,11 @@
     </main>
 
     <!-- Footer Section -->
-    <footer class="bg-white text-center py-4">
+    <footer class="bg-dark text-white text-center py-4">
         <div class="footer-logo-container">
             <img src="images/logo.png" alt="KubEdge Logo" class="footer-logo logo-size">
         </div>
-        <p class="text-dark">Founder: Devesh Singh Rathore | Email: <a href="mailto:deveshrathore13@gmail.com" class="text-primary">deveshrathore13@gmail.com</a></p>
+        <p class="text-light">Founder: Devesh Singh Rathore | Email: <a href="mailto:deveshrathore13@gmail.com" class="text-primary">deveshrathore13@gmail.com</a></p>
     </footer>
 
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
