--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <!-- Hero Section -->
         <section class="hero text-center" data-aos="fade-in">
             <img src="images/logo.png" alt="KubEdge Logo" class="img-fluid mb-4 logo-size">
-            <h1 class="hero-title display-3 text-uppercase text-dark">KubEdge</h1>
-            <p class="hero-description lead fs-4 mt-3 mb-4 text-muted">Unlock Hosting at the EDGE</p>
+            <h1 class="hero-title display-3 text-uppercase" style="color: #333;">KubEdge</h1>
+            <p class="hero-description lead fs-4 mt-3 mb-4 text-dark">Unlock Hosting at the EDGE</p>
             <a href="#documentation" class="btn btn-dark btn-lg mt-3 px-5 py-3 shadow-lg" style="font-size: 1.2rem;">Learn More</a>
         </section>
 
@@ -45,27 +45,27 @@
                 <div class="tools-card">
                     <img src="images/CiCd.png" alt="CI/CD" class="img-fluid mb-3 logo-size">
                     <h4 style="color: #333;">CI/CD</h4>
-                    <p>Seamless integration for continuous integration and delivery.</p>
+                    <p style="color: #555;">Seamless integration for continuous integration and delivery.</p>
                 </div>
                 <div class="tools-card">
                     <img src="images/docker.png" alt="Docker" class="img-fluid mb-3 logo-size">
                     <h4 style="color: #333;">Docker</h4>
-                    <p>Streamline application deployment with containerization.</p>
+                    <p style="color: #555;">Streamline application deployment with containerization.</p>
                 </div>
                 <div class="tools-card">
                     <img src="images/Kubernetes.png" alt="Kubernetes" class="img-fluid mb-3 logo-size">
                     <h4 style="color: #333;">Kubernetes</h4>
-                    <p>Effortless orchestration for complex cloud environments.</p>
+                    <p style="color: #555;">Effortless orchestration for complex cloud environments.</p>
                 </div>
                 <div class="tools-card">
                     <img src="images/Prometheus.png" alt="Prometheus" class="img-fluid mb-3 logo-size">
                     <h4 style="color: #333;">Prometheus</h4>
-                    <p>Advanced monitoring and alerting for cloud infrastructure.</p>
+                    <p style="color: #555;">Advanced monitoring and alerting for cloud infrastructure.</p>
                 </div>
                 <div class="tools-card">
                     <img src="images/grafana.png" alt="Grafana" class="img-fluid mb-3 logo-size">
                     <h4 style="color: #333;">Grafana</h4>
-                    <p>Visualize and analyze your cloud infrastructure metrics.</p>
+                    <p style="color: #555;">Visualize and analyze your cloud infrastructure metrics.</p>
                 </div>
             </div>
         </section>
@@ -74,7 +74,7 @@
         <section class="about-section mt-5 text-center">
             <h2 style="color: #333;">About KubEdge</h2>
             <img src="images/hero-image.jpg" alt="Hero Image" class="img-fluid my-4" style="border-radius: 8px; max-height: 300px;">
-            <p><strong>Devesh Singh Rathore</strong> is the creator of KubEdge, a tool designed to revolutionize cloud computing using Kubernetes and Docker.</p>
+            <p style="color: #555;"><strong>Devesh Singh Rathore</strong> is the creator of KubEdge, a tool designed to revolutionize cloud computing using Kubernetes and Docker.</p>
             <a href="/documents/documentation.html" class="btn btn-dark btn-lg mt-3">View Documents</a>
         </section>
 
@@ -86,8 +86,8 @@
                     <div class="card">
                         <img src="images/logo.png" alt="KubEdge Documentation" class="card-img-top logo-size">
                         <div class="card-body">
-                            <h5 class="card-title">KubEdge Deployment</h5>
-                            <p class="card-text">Deploy and manage your applications easily with KubEdge.</p>
+                            <h5 class="card-title" style="color: #333;">KubEdge Deployment</h5>
+                            <p class="card-text" style="color: #555;">Deploy and manage your applications easily with KubEdge.</p>
                             <a href="https://github.com/deveshrathore123/kubedge_server.git" class="btn btn-dark">View Documentation</a>
                         </div>
                     </div>
@@ -96,8 +96,8 @@
                     <div class="card">
                         <img src="images/docker.png" alt="Docker Basics" class="card-img-top logo-size">
                         <div class="card-body">
-                            <h5 class="card-title">Docker and Kubernetes Basics</h5>
-                            <p class="card-text">Get started with the fundamentals of containerization and orchestration.</p>
+                            <h5 class="card-title" style="color: #333;">Docker and Kubernetes Basics</h5>
+                            <p class="card-text" style="color: #555;">Get started with the fundamentals of containerization and orchestration.</p>
                             <a href="https://www.docker.com/resources/what-container" class="btn btn-dark">Learn More</a>
                         </div>
                     </div>
@@ -112,19 +112,19 @@
                 <div class="col-md-4">
                     <div class="feature-card text-center">
                         <h4 style="color: #333;">Scalability</h4>
-                        <p>KubEdge offers seamless scalability for both small and large-scale cloud applications, enabling flexible deployment options to meet your needs.</p>
+                        <p style="color: #555;">KubEdge offers seamless scalability for both small and large-scale cloud applications, enabling flexible deployment options to meet your needs.</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="feature-card text-center">
                         <h4 style="color: #333;">Security</h4>
-                        <p>With Kubernetes and Docker, KubEdge ensures that your cloud infrastructure is protected by top-notch security features, minimizing risk.</p>
+                        <p style="color: #555;">With Kubernetes and Docker, KubEdge ensures that your cloud infrastructure is protected by top-notch security features, minimizing risk.</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="feature-card text-center">
                         <h4 style="color: #333;">Monitoring</h4>
-                        <p>Built-in Prometheus and Grafana integration provide detailed metrics and visualizations, ensuring you can monitor performance and optimize your infrastructure.</p>
+                        <p style="color: #555;">Built-in Prometheus and Grafana integration provide detailed metrics and visualizations, ensuring you can monitor performance and optimize your infrastructure.</p>
                     </div>
                 </div>
             </div>
@@ -143,14 +143,14 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="testimonial-card text-center">
-                        <p>"KubEdge has drastically simplified our cloud operations. The integration with Kubernetes and Docker is flawless!"</p>
-                        <h5>- John Doe, Cloud Engineer</h5>
+                        <p style="color: #555;">"KubEdge has drastically simplified our cloud operations. The integration with Kubernetes and Docker is flawless!"</p>
+                        <h5 style="color: #333;">- John Doe, Cloud Engineer</h5>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="testimonial-card text-center">
-                        <p>"As a developer, KubEdge's CI/CD pipeline has boosted our deployment process. It's a game changer!"</p>
-                        <h5>- Jane Smith, DevOps Specialist</h5>
+                        <p style="color: #555;">"As a developer, KubEdge's CI/CD pipeline has boosted our deployment process. It's a game changer!"</p>
+                        <h5 style="color: #333;">- Jane Smith, DevOps Specialist</h5>
                     </div>
                 </div>
             </div>
