--- a/documents/documentation.html
+++ b/documents/documentation.html
@@ -16,8 +16,8 @@
 
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #121212;
-            color: #fff;
+            background-color: #f4f4f9;
+            color: #333;
             overflow-x: hidden;
             height: 100vh;
         }
@@ -31,7 +31,7 @@
             height: 100%;
             object-fit: cover;
             z-index: -1;
-            opacity: 0.7;
+            opacity: 0.5;
         }
 
         /* Overlay to help contrast with the dark background */
@@ -50,17 +50,17 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
-            z-index: -1; /* Behind the content */
+            background: rgba(255, 255, 255, 0.7); /* Semi-transparent white overlay */
+            z-index: -1;
         }
 
         h2,
         h3 {
-            color: #1abc9c; /* Same color as the links */
+            color: #16a085; /* Soft teal color */
             text-align: center;
             margin-top: 40px;
-            font-size: 2rem;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* Added text shadow */
+            font-size: 2.2rem;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); /* Subtle text shadow for contrast */
         }
 
         h3 {
@@ -72,14 +72,14 @@
             font-size: 1.1rem;
             line-height: 1.8;
             margin-top: 20px;
-            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5); /* Added text shadow */
+            color: #555;
         }
 
         ul,
         ol {
             margin-left: 30px;
             font-size: 1.1rem;
-            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5); /* Added text shadow */
+            color: #555;
         }
 
         li {
@@ -98,7 +98,7 @@
         /* Button Styling */
         .btn {
             display: inline-block;
-            background-color: #1abc9c; /* Same color as the headings and links */
+            background-color: #16a085; /* Soft teal color */
             padding: 15px 30px;
             font-size: 1.1rem;
             color: #fff;
@@ -109,7 +109,7 @@
         }
 
         .btn:hover {
-            background-color: #16a085; /* Darker shade of teal for hover */
+            background-color: #1abc9c; /* Slightly darker shade on hover */
         }
 
         /* Footer Styling */
@@ -124,7 +124,7 @@
         }
 
         footer a {
-            color: #1abc9c; /* Same color as the headings and links */
+            color: #1abc9c;
             text-decoration: none;
         }
 
@@ -134,14 +134,30 @@
 
         /* Links for Documentation */
         ul a {
-            color: #1abc9c; /* Same color as the headings and buttons */
+            color: #16a085;
             text-decoration: none;
             transition: color 0.3s ease;
         }
 
         ul a:hover {
-            color: #16a085; /* Darker shade of teal on hover */
+            color: #1abc9c; /* Darker shade on hover */
             text-decoration: underline;
+        }
+
+        /* Section Styling */
+        section {
+            margin-bottom: 40px;
+        }
+
+        section h3 {
+            color: #333;
+            font-weight: 600;
+        }
+
+        section p,
+        section ul {
+            color: #555;
+            font-size: 1rem;
         }
     </style>
 </head>
